2017-12-14  Basuke Suzuki  <Basuke.Suzuki@sony.com>

        [webkitpy, Windows] Remove unnecessary debug message
        https://bugs.webkit.org/show_bug.cgi?id=180844

        Reviewed by Ryosuke Niwa.

        * Scripts/webkitpy/common/system/crashlogs.py:
        (CrashLogs._find_newest_log_win): Delete debug print

2017-12-14  David Kilzer  <ddkilzer@apple.com>

        check-webkit-style: Stop warning about underscores in webrtc source
        <https://webkit.org/b/180848>

        Reviewed by Joseph Pecoraro.

        * Scripts/webkitpy/style/checker.py:
        (_PATH_RULES_SPECIFIER): Suppress readability/naming/underscores
        warnings under Source/ThirdParty/libwebrtc/Source/webrtc.

2017-12-14  Jonathan Bedard  <jbedard@apple.com>

        webkitpy: Replace Version.contained_in with Version.__contains__
        https://bugs.webkit.org/show_bug.cgi?id=180772
        <rdar://problem/36033555>

        Reviewed by David Kilzer.

        Using __contains__ instead of contained_in allows for the more
        Pythonic 'in' operator to be used.

        * Scripts/webkitpy/common/version.py:
        (Version):
        (Version.__contains__): Replace contained_in. Note that self is now
        the container.
        (Version.contained_in): Deleted.
        * Scripts/webkitpy/common/version_name_map.py:
        (VersionNameMap.to_name):
        * Scripts/webkitpy/common/version_unittest.py:
        (VersionTestCase.test_contained_in):

2017-12-14  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r225931.

        Breaks internal builds.

        Reverted changeset:

        "Fix Mac CMake build"
        https://bugs.webkit.org/show_bug.cgi?id=180835
        https://trac.webkit.org/changeset/225931

2017-12-14  Devin Rousso  <webkit@devinrousso.com>

        Web Inspector: replace HTMLCanvasElement with CanvasRenderingContext for instrumentation logic
        https://bugs.webkit.org/show_bug.cgi?id=180770
